lab-2/examples/ex20.nojs
// error

int main() {
    float errFLoat = 111111111111111111111111111111111111111111111111111111111111111.01111111111;
    int errInt = 555555555555555555;

    return 0;
}